# file-scanner

./: .dockerignore  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  SECURITY.md  clamav_rest.py  config.py  database.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  run.sh  scalingo.json  tasks.py  tests.py
.github/workflows/: ci.yml  docker-publish.yml  scanner-ghcr.yml
client-examples/: curl-example.sh
deploy/docker/: strip-python.sh
deploy/env/: app.defaults  exav.defaults
deploy/scripts/: mint-token.py  new-issuer.py
docs/: api.md  architecture.md  categories.md  client-encryption.md  deployment.md  scanner-backends.md  security.md
migrations/: env.py
migrations/versions/: 39d198836b90_create_scan_jobs_table.py
src/: app.py  broker.py  config.py  dashboard.py  encryption.py  jwt_auth.py  metrics.py  results.py  scanner.py  ssrf.py  tasks.py  validation.py  worker.py
src/scanners/: __init__.py  clamav.py  exav.py  jcop.py
tests/: conftest.py  test_api.py  test_async.py  test_dashboard.py  test_encryption.py  test_jcop.py  test_jwt.py  test_results.py  test_scanner.py  test_ssrf.py
